# clamav-holloman3

./: ADVANCED-PLAN.md  BENCHMARK-REPORT.md  CMakeLists.txt  HOLLOMAN-REPORT.md  TODO-holloman.md  holloman-integration.aux  holloman-integration.tex
holloman/: CMakeLists.txt  LICENSE  PATENTS.md  arch_detect.c  hilbert.c  hilbert.h  hilbert_avx2.s  hilbert_external_buffer.h  hilbert_external_buffer_asm.s  hilbert_mapping.c  hilbert_mapping_avx2.s  hilbert_utils.c  hilbert_utils_avx2.s  holloman.h  holloman_avx2.c  lanczos_avx2_optimized.c
holloman/hilbert-avx2/src/: hilbert.c  hilbert_external_buffer.c  hilbert_mapping.c  hilbert_mapping_avx2_cache_blocking.s  hilbert_utils.c
libclamav/: CMakeLists.txt  matcher-hash-types.h  matcher-hash.c  others.c  readdb.c  readdb.h
sigtool/: sigtool.c
